[package]
name = "tough-hyper-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Latest commit on the main branch
sigstore = { git = "https://github.com/sigstore/sigstore-rs.git", rev = "fd2968ed71622b51f60e3f0919d984e0bf163321", default-features = false, features = [
  "sigstore-trust-root",
  "cosign-rustls-tls",
  "cached-client",
] }
